/*------------------------------------------------------------------------------
 * Copyright (C) 2019, Esperanto Technologies Inc.
 * The copyright to the computer program(s) herein is the
 * property of Esperanto Technologies, Inc. All Rights Reserved.
 * The program(s) may be used and/or copied only with
 * the written permission of Esperanto Technologies and
 * in accordance with the terms and conditions stipulated in the
 * agreement/contract under which the program(s) have been supplied.
 ------------------------------------------------------------------------------ */

syntax = "proto3";

package simulator_api;

enum MMIOAccessType {
    MMIO_NONE = 0;
    MMIO_READ = 1;
    MMIO_WRITE = 2;
}

message MMIOAccess {
    MMIOAccessType type = 1;
    uint64 address  = 2;
    uint32 size = 3;
    uint64 value = 4;
}

enum DMAAccessType {
    DMA_NONE = 0;
    DMA_READ = 1;
    DMA_WRITE = 2;
}

message DMAAccess {
    DMAAccessType type = 1 ;
    uint64 dev_addr = 2;
    uint64 size = 3;
    bytes data = 4;
}
